infra/prod/main/kgateway/http-gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: main-gw
  namespace: kgateway
spec:
  gatewayClassName: kgateway
  addresses:
    - type: IPAddress
      value: 192.168.200.20
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: tls
      protocol: TLS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough

    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-hyvel-certificate-secret
          - kind: Secret
            name: wildcard-ho-hyvel-certificate-secret
